# justpark

./: .gitignore  Makefile  README.md  pyproject.toml  run.py
.github/workflows/: fetch-jp-data.yml  keep-alive.yml
.streamlit/: config.toml
scripts/: fetch_jp_data.py  fetch_jp_state.py  gcal.py  prepare_dashboard.py
src/: app.py  dashboard.py  data_utils.py  viz.py
src/bookings/: __init__.py  app.py  data.py  models.py  schemas.py
src/ui/: app.py  driver.py  earnings.py  live.py  occupancy.py  sql_widget.py
tests/: sample_data.py  test_dashboard.py
web/: index.html  package-lock.json  package.json  tsconfig.json
web/functions/api/: dashboard.ts  observations.ts
web/src/: App.tsx  ContinuousWeekCalendar.tsx  ObservationTimeline.tsx  components.tsx  format.ts  styles.css  types.ts  views.tsx
