[project]
name = "justpark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.30",
    "humanize>=4.13.0",
    "polars>=1.33.1",
    "pydantic>=2.11.7",
    "sqlparse>=0.5.3",
    "streamlit>=1.43.1",
]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
]
